--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2"
