--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Abbas",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.8",
